--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -16,10 +16,10 @@
     <h4>Menu Superior </h4>
     <ul>
         <li>
-            <a href="{%url "index" %}"> Inicio</a>
+            <a href="{% url 'index' %}"> Inicio</a>
         </li>
         <li>
-            <a href="{%url "sobre" %}"> Sobre Nós</a>
+            <a href="{% url 'sobre' %}"> Sobre Nós</a>
         </li>
     </ul>
     {%    block conteudo    %}
