criação do css e estilização da página.

--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Catálogo de Bots</title>
-    <link rel="stylesheet" href="{% static 'static\css\estilo.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
 </head>
 <body>
 
