--- a/paginas/templates/paginas/form.html
+++ b/paginas/templates/paginas/form.html
@@ -3,13 +3,20 @@
 {% load static %}
 
 {% block conteudo %}
+
+<h2>{{ titulo }}</h2>
+
 <form method="POST">
         {% csrf_token %}
     
         {{ form.as_p }}
     
         <button type="submit" class="btn btn-success">
-            Cadastrar
+            {{ botao }}
         </button>
+
+        <div style="text-align: center; margin-top: 20px;">
+            <a href="{% url 'index' %}">← Cancelar e voltar</a>
+        </div>
  </form>
  {% endblock %}
