--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -12,9 +12,18 @@
     <header>
         <h1>🤖 Catálogo de Bots</h1>
         <nav>
+            {% if request.user.is_authenticated %}
             <a href="{% url 'index' %}">Biblioteca</a> |
-            <a href="{% url 'sobre' %}">Sobre</a> |
             <a href="{% url 'cadastrar-bot' %}">Cadastrar Bot</a> |
+            <a href="{% url 'sobre' %}">Sobre</a> |
+            <a href="{% url logout %}"> Sair </a> |
+            {% else %}
+            <li>
+                <a href="{% url 'login' %}"> Entrar </a> |
+                <a href="{% url 'sobre' %}">Sobre</a> |
+            </li>
+            {% endif  %}
+        
         </nav>
     </header>
 
@@ -22,7 +31,7 @@
         {% block conteudo %}
         <h2>📋 Lista de Bots</h2>
         <p>
-            Conteúdo da página..
+            conteúdo da página...
         </p>
         {% endblock %}
     </main>
