--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>{% block title %}Catálogo de Bots{% endblock %}</title>
-
+  <meta name="description" content="Catálogo de Bots - Explore e compartilhe bots incríveis!" />
+  {% comment %} <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" /> {% endcomment %}
   <!-- Bootstrap 5.3 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -22,11 +23,30 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center" href="{% url 'index' %}">
-        <i class="bi bi-robot fs-4 me-2"></i> Catálogo de Bots
-        {% if request.user.is_authenticated %}
-        <span class="ms-5">Usuário: {{request.user}}<span>
-        {% endif %}
+        </i> <img src="{% static 'img/giphy.gif' %}" class="img-thumbnail me-2" alt="Logo" style="height:40px;"> Catálogo de Bots
       </a>
+      {% if request.user.is_authenticated %}
+      <div class="dropdown me-3">
+        <button class="btn btn-link nav-link dropdown-toggle p-0" id="userDropdown" 
+                data-bs-toggle="dropdown" aria-expanded="false">
+          {{ request.user.get_username }}
+        </button>
+        <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="userDropdown">
+          <li>
+            <a class="dropdown-item" href="{% url 'editar-usuario' %}">
+              <i class="bi bi-person-gear me-2"></i> Editar Perfil
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-item" href="{% url 'alterar-senha' %}">
+              <i class="bi bi-key me-2"></i> Alterar Senha
+            </a>
+          </li>
+        </ul>
+      </div>
+    {% endif %}
+    
+      
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -49,7 +69,10 @@
 
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'listar-bots' %}">Meus Bots</a>
+            <a class="nav-link" href="{% url 'listar-meus-bots' %}">Meus Bots</a>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'listar-bots' %}">Bots</a>
         </li>
 
           <!-- Botão para cadastrarbot.html -->
@@ -60,7 +83,7 @@
           </li>
 
           {% if request.user.is_authenticated %}
-            
+
             {% if request.user.is_superuser %}
             <!-- DROPDOWN ADMIN -->
             <li class="nav-item dropdown">
