--- a/paginas/templates/paginas/form.html
+++ b/paginas/templates/paginas/form.html
@@ -15,7 +15,7 @@
             
             <h2>{{ titulo }}</h2>
             
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 
                 {{ form|crispy }}
