--- a/paginas/templates/paginas/formUpdate.html
+++ b/paginas/templates/paginas/formUpdate.html
@@ -8,7 +8,7 @@
         <div class="card-body">
             <h3 class="text-center mb-4">{{ titulo }}</h3>
 
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form|crispy }}
 
