--- a/paginas/templates/paginas/index.html
+++ b/paginas/templates/paginas/index.html
@@ -9,6 +9,7 @@
   {% comment %} <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}" /> {% endcomment %}
   <!-- Bootstrap 5.3 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/glassmorphism-css/dist/glass.min.css">
 
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -111,7 +112,13 @@
 
             <li class="nav-item d-none d-lg-block"><span class="nav-link disabled">|</span></li>
             <li class="nav-item">
-              <a class="btn btn-sm btn-custom-outline" href="{% url 'logout' %}">Sair</a>
+              <form method="post" action="{% url 'logout' %}" class="d-inline">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-sm btn-custom-outline">
+            Sair
+            </button>
+          </form>
+
             </li>
           {% else %}
             <li class="nav-item d-none d-lg-block"><span class="nav-link disabled">|</span></li>
