inicio a criação da pesquisa no list view

--- a/paginas/templates/paginas/listas/bots.html
+++ b/paginas/templates/paginas/listas/bots.html
@@ -5,6 +5,14 @@
 
     <h3 class="my-5">Bots cadastrados</h3>
 
+    <hr>
+    <form method="get" class="d-flex mb-3">
+        <input type="text" name="nome" class="form-control me-2" placeholder="Pesquisar por nome..." value="{{ request.GET.nome }}">
+        <button type="submit" class="btn btn-primary me-2">Buscar</button>
+        <a href="{% url 'listar-bots' %}" class="btn btn-secondary">Limpar</a>
+    </form>
+    <hr>
+
         <table class="table table-striped">
             <tr>
                 <th>Nome</th>
