--- a/paginas/templates/paginas/form.html
+++ b/paginas/templates/paginas/form.html
@@ -21,6 +21,14 @@
       {% csrf_token %}
       {{ form|crispy }}
 
+      {# Preview de imagem para o Bot quando em edição #}
+      {% load perfil_extras %}
+      {% if form.instance and form.instance|has_attr:'imagem' and form.instance.imagem %}
+        <div class="mt-3 text-center">
+          <img src="{{ form.instance.imagem.url }}" alt="Preview" class="img-fluid rounded" style="max-height:200px; object-fit:cover;">
+        </div>
+      {% endif %}
+
       <button type="submit" class="glass-btn w-100">{{ botao }}</button>
     </form>
 
